[workspace]
resolver = "2"
members = [
    "phoenix-sdk",
    "phoenix-sdk-core",
    "examples"
]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] } 
solana-program = "1.14.5"
solana-account-decoder = "1.14.7"
anyhow = "1.0.52"
solana-sdk = "1.10.32"
borsh = "0.9.3"
rand = "0.7.3"
ellipsis-client = "0.1.14"
phoenix-v1 = { git = "https://github.com/Ellipsis-Labs/phoenix-v1/" , rev = "77e0fb6", features = [ "no-entrypoint" ]} 
tokio = { version = "1.23.0", features = ["full"] }
solana-client = "1.10.32"
clap = { version = "3.0.13", features = ["derive"] }
shellexpand = "2.1.2"
num-traits = "0.2"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26"
itertools = "0.10.5"
bytemuck = "1.11.0"
