[workspace]
resolver = "2"
members = [
    "phoenix-sdk",
    "phoenix-sdk-core"
]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
anyhow = "1.0.52"
solana-account-decoder = ">=1.14.12, <1.19"
solana-sdk = ">=1.14.12, <1.19"
solana-client = ">=1.14.12, <1.19"
borsh = "0.9.3"
rand = "0.7.3"
ellipsis-client = "1.0.0"
ellipsis-transaction-utils = "1.0.0" 
phoenix-common = { version = "0.2.1", features = [ "no-entrypoint" ]} 
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "3.0.13", features = ["derive"] }
shellexpand = "2.1.2"
num-traits = "0.2"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26"
itertools = "0.10.5"
bytemuck = "1.13.1"
serde = "^1.0.63"
phoenix-seat-manager-common = "0.1.1"
