cargo-features = ["workspace-inheritance"]

[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
bs58 = "0.4.0"
tokio = { workspace = true }
bytemuck = { workspace = true }
ellipsis-client = { workspace = true }
clap = { workspace = true }
shellexpand = { workspace = true }
borsh = { workspace = true }
phoenix-v1 = { workspace = true }
phoenix-sdk = { path = "../phoenix-sdk" }
generic-token-faucet = "0.1.2"
phoenix-seat-manager = { workspace = true }
solana-cli-config = "1.14.7"
reqwest = "0.11.14"
serde_json = "1.0.94"
bincode = "1.3.3"
