cargo-features = ["workspace-inheritance"]

[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
bs58 = "0.4.0"
tokio = { workspace = true }
bytemuck = { workspace = true }
ellipsis-client = { workspace = true }
clap = { workspace = true }
shellexpand = { workspace = true }
borsh = { workspace = true }
phoenix-common = { workspace = true }
phoenix-sdk = { path = "../phoenix-sdk" }
phoenix-sdk-core = { path = "../phoenix-sdk-core" }
generic-token-faucet = "0.1.2"
solana-cli-config = "1.14.7"
reqwest = "0.11.14"
serde_json = "1.0.94"
bincode = "1.3.3"
spl-token-2022 = "<0.4.0"