cargo-features = ["workspace-inheritance"]

[package]
name = "phoenix-sdk-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-program = { workspace = true }
phoenix-v1 = { workspace = true }
borsh = { workspace = true }
solana-sdk = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
itertools = "0.10.5"
rand = { workspace = true }
anyhow = { workspace = true }
